Fix - nav links overlapping logo

--- a/index.scss
+++ b/index.scss
@@ -61,6 +61,7 @@ nav {
 
 .navbar-toggler {
     width: 25%;
+    height: 50px;
 }
 // ----------------------------------------//
 .section {
